# Win32BassBooster

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.githooks/: pre-commit
.github/workflows/: build.yml  deploy-coverage.yml
resources/: app.rc
src/: audio_device.hpp  audio_pipeline.cpp  audio_pipeline.hpp  audio_pipeline_interface.hpp  audio_pipeline_test.cpp  bass_boost_filter.cpp  bass_boost_filter.hpp  bass_boost_filter_test.cpp  endpoint_audio_format.cpp  endpoint_audio_format.hpp  endpoint_audio_format_test.cpp  harmonic_exciter.cpp  harmonic_exciter.hpp  harmonic_exciter_test.cpp  loopback_capture_activation.cpp  loopback_capture_activation.hpp  loopback_capture_activation_test.cpp  main.cpp  main_window.cpp  main_window.hpp  main_window_test.cpp  theme_manager.cpp  theme_manager.hpp  theme_manager_test.cpp  wasapi_audio_device.cpp  wasapi_audio_device.hpp  wasapi_audio_device_test.cpp
